
5.1.0 -> 5.2a0:
    - jbj: add FNM_EXTMATCH to default flags w RPMMIRE_GLOB.
    - jbj: update {nl,id,pl}.po (Translation Project).
    - jbj: rpmio: permit adler32/crc32/crc64 in spite of --without-zlib.
    - jbj: rpmio: eliminate HAVE_ZLIB_H tests, use WITH_ZLIB tests instead.
    - rse: rpmio: allow newer fnmatch to build on non-Linux platforms, too.
    - jbj: rpmio: upgrade  fnmatch to version that implements FNM_EXTMATCH.
    - jbj: rpmpsm: simplify runTriggers() by adding rpmTriggersLoop().
    - jbj: rpmpsm: extract trigger tags once, simplify code, consistent naming.
    - jbj: rpmpsm: extract NVRA and INSTALLPREFIXES lazily & persistently.
    - jbj: speed up dirname triggers from glob patterns. almost spiffy ...
    - jbj: rpmdb: add rpmdbMireApply to retrieve primary keys from index.
    - jbj: fire dirname triggers from glob patterns (pig slow, fixing todo++).
    - jbj: rpmfi: add storage and getters for exclude/include patterns.
    - jbj: rpmds: add storage and getters for exclude/include patterns.
    - jbj: rpmpsm: retrieve triggers lazily.
    - jbj: use parent dirnames index if triggername ends with '/'.
    - jbj: fire triggers on package file paths.
    - jbj: use rpmio Readlink everywhere consistently.
    - rpm.org: fix error messages in processScriptFiles().
    - jbj: fire triggers on parent directory paths.
    - jbj: use rpmds iterator and getters for trigger->N parse side effects.
    - jbj: hdrfmt: triggerconds header extension display was incorrect.
    - jbj: expose rpmdsType() in rpmds ABI.
    - jbj: add rpmdsType() to name dependency sets status quo ante.
    - jbj: common approach to ensure triggers fire only once.
    - jbj: fire triggers from Provides: dependency set.
    - jbj: rpmio: add argiCmp and argiSort.
    - jbj: loop over 1 element NEVRA dependency set when firing triggers.
    - jbj: permit rpmdsNew() to create RPMTAG_NAME rpmds, simplify ds->Type.
    - jbj: permit multiple triggers to fire from packages.